# claude-usage-proxy

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  claude_proxy.db  claude_proxy.db-shm  claude_proxy.db-wal  pyproject.toml
migrations/: env.py
migrations/versions/: 15ca813bb495_initial.py  2c783bee5481_add_messages_json_to_api_requests.py  3415480f748d_add_complexity_score_and_complexity_to_.py  e467833de78a_add_api_tool_uses_table.py
src/claude_proxy/: alerts.py  config.py  pricing.py
src/claude_proxy/cli/: main.py
src/claude_proxy/cli/commands/: export.py  list_cmd.py  stats.py
src/claude_proxy/cli/tui/: dashboard.py
src/claude_proxy/db/: engine.py  models.py  repository.py
src/claude_proxy/proxy/: app.py  parser.py  routes.py  streaming.py
