[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-usage-proxy"
version = "0.1.0"
description = "Local HTTP proxy that intercepts Claude API calls and records usage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "typer>=0.13.0",
    "rich>=13.9.0",
    "textual>=1.0.0",
    "pydantic-settings>=2.6.0",
    "plotext>=5.2.0",
    "textual-plotext>=0.2.0",
    "rumps>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[project.scripts]
claude-proxy = "claude_proxy.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_proxy"]

[tool.hatch.build]
sources = ["src"]
